service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: web2
  namespace: default
spec:
  ports:
  - port: 6000
    protocol: TCP
    targetPort: 8000
  selector:
    run: web2
  type: NodePort
